--- a/report/Thesis.tex
+++ b/report/Thesis.tex
@@ -113,12 +113,13 @@
 
 %%%%%% Appendices
 \appendix
-\include{appendix/drl_algorithms}
+\include{appendix/algorithms}
 \include{appendix/state_representation}
 \include{appendix/hyperparameter_tuning}
 \include{appendix/datasets}
 \include{appendix/hyperparameters_experiment}
 \include{appendix/evaluation_metrics}
 \include{appendix/experiments}
+\include{appendix/explanations}
 
 \end{document}
