Add main conclusion

--- a/report/contents/conclusion.tex
+++ b/report/contents/conclusion.tex
@@ -1,1 +1,7 @@
-\chapter{Conclusion}\label{ch:conclusion}
+\chapter{Conclusion} \label{ch:conclusion}
+
+This thesis has explored the application of \acrfull{drl} algorithms for optimal portfolio allocation in dynamic financial markets. The primary objective was to develop an explainable model-agnostic framework capable of enhancing the understanding of any \acrshort{drl} algorithm predictions, with the goal of providing insights into the decision-making process of these complex models as well as being a tool for auditability purposes. 
+
+Five state-of-the-art \acrshort{drl} algorithms were implemented and evaluated on a portfolio management task. To assess the behaviour of these algorithms in different market conditions, a comprehensive experimental setup was designed, involving various datasets and environment representations. The datasets ranged from equities to commodities and currencies, each presenting unique challenges and opportunities for the \acrshort{drl} algorithms. The results demonstrated that \acrshort{drl} algorithms can effectively learn and adapt to dynamic market conditions, achieving competitive performance compared to traditional portfolio management strategies. However, the challenge remains in finding the optimal hyper-parameters, uniquely suited to each algorithm and dataset combination, in order to be able to fully exploit their potential.
+
+Regarding the explainability aspect, the framework developed in this thesis successfully enhances the interpretability, transparency and auditability of these \gls{blackbox} models. The incorporation of feature importance through a surrogate model, \acrfull{lime} analysis and \acrfull{shap} values provides an exhaustive methodology for understanding both individual predictions and the overall decision-making process of the models over a test set. However, the results highlight the superiority of the \acrshort{shap} technique, which is capable of providing global explanations and feature importance without the need for an additional layer, in conjunction with local explanations. 
