Fix missing word in conclusion

--- a/report/contents/conclusion.tex
+++ b/report/contents/conclusion.tex
@@ -1,6 +1,6 @@
 \chapter{Conclusion} \label{ch:conclusion}
 
-This thesis has explored the application of \acrfull{drl} algorithms for optimal portfolio allocation in dynamic financial markets. The primary objective was to develop an explainable model-agnostic framework capable of enhancing the understanding of any \acrshort{drl} algorithm's predictions. Such a tool would provide insights into the decision-making process of these complex models auditability.
+This thesis has explored the application of \acrfull{drl} algorithms for optimal portfolio allocation in dynamic financial markets. The primary objective was to develop an explainable model-agnostic framework capable of enhancing the understanding of any \acrshort{drl} algorithm's predictions. Such a tool would provide insights into the decision-making process of these complex models and facilitate auditability.
 
 Five state-of-the-art \acrshort{drl} algorithms were implemented and evaluated on a portfolio management task. To assess the behaviour of these algorithms in different market conditions, a comprehensive experimental setup was designed, involving various datasets and environment representations. The datasets ranged from equities to commodities and currencies, each presenting unique challenges and opportunities for the \acrshort{drl} algorithms. The results demonstrated that \acrshort{drl} algorithms can effectively learn and adapt to dynamic market conditions, achieving competitive performance compared to traditional portfolio management strategies. However, the challenge remains in finding the optimal hyper-parameters, uniquely suited to each algorithm and dataset combination, in order to be able to fully exploit their potential.
 
