Add use of acronyms

--- a/report/contents/abstract.tex
+++ b/report/contents/abstract.tex
@@ -1,7 +1,7 @@
 \chapter*{Abstract}
 
-The dynamic and stochastic nature of financial markets together with the highly non-stationary and noisy financial time series data make the task of portfolio optimisation particularly challenging. However, it is their nature that makes them particularly well-suited for Deep Reinforcement Learning (DRL) algorithms, which can learn a trading strategy directly from the environment. Nonetheless, there are still significant challenges preventing its widespread adoption in the financial industry, such as difficulty in finding the appropriate algorithm with a suitable reward function and lack of transparency and interpretability. 
+The dynamic and stochastic nature of financial markets together with the highly non-stationary and noisy financial time series data make the task of portfolio optimisation particularly challenging. However, it is their nature that makes them particularly well-suited for \acrfull{drl} algorithms, which can learn a trading strategy directly from the environment. Nonetheless, there are still significant challenges preventing its widespread adoption in the financial industry, such as difficulty in finding the appropriate algorithm with a suitable reward function and lack of transparency and interpretability. 
 
-The goal of this thesis is to develop an explainable DRL model for portfolio optimisation that has the ability to leverage historical data to learn the optimal training strategy that balances return maximisation and risk minimisation. Five prominent DRL algorithms are implemented and their performance is evaluated in different scenarios, including the impact of a larger financial environment representation, portfolio size and asset composition. Once the algorithms are trained, post-hoc explainability techniques are applied to understand which market conditions lead to a particular portfolio allocation.
+The goal of this thesis is to develop an explainable \acrshort{drl} model for portfolio optimisation that has the ability to leverage historical data to learn the optimal trading strategy that balances return maximisation and risk minimisation. Five prominent \acrshort{drl} algorithms are implemented and their performance is evaluated in different scenarios, including the impact of a larger financial environment representation, portfolio size and asset composition. Once the algorithms are trained, post-hoc explainability techniques are applied to understand which market conditions lead to a particular portfolio allocation.
 
-Although the performance of the algorithms does not generally outperform all of the benchmarks, the results show that the agents are a powerful tool in portfolio management capable of learning from high-dimensional data and adapting to changing market conditions. The crucial contribution of this research lies in the explainability framework, particularly the use of Shapley Additive Explanations (SHAP) to provide insights into the decision-making process over the testing period in conjunction with interpretation for specific instances.  
+Although the performance of the algorithms does not generally outperform all of the benchmarks, the results show that the agents are a powerful tool in portfolio management capable of learning from high-dimensional data and adapting to changing market conditions. The crucial contribution of this research lies in the explainability framework, particularly the use of \acrfull{shap} to provide insights into the decision-making process over the testing period in conjunction with interpretation for specific instances.  
