Update page numbering

--- a/report/Thesis.tex
+++ b/report/Thesis.tex
@@ -62,7 +62,7 @@
 \include{contents/acknowledgements}
 
 %%%%% Table of contents
-\pagenumbering{roman}
+\pagenumbering{Roman}
 \setcounter{tocdepth}{2}
 \tableofcontents
 \newpage
@@ -103,8 +103,6 @@
 \include{contents/results}
 \include{contents/issues}
 \include{contents/conclusion}
-
-\pagenumbering{roman}
 
 %%%%%% Bibliography
 \renewcommand{\bibname}{References}
