--- a/report/Thesis.tex
+++ b/report/Thesis.tex
@@ -119,5 +119,6 @@
 \include{appendix/evaluation_metrics}
 \include{appendix/experiments}
 \include{appendix/explanations}
+\include{appendix/code}
 
 \end{document}
