Add Jupyter Examples

--- a/report/appendix/code.tex
+++ b/report/appendix/code.tex
@@ -155,3 +155,25 @@ The code is available as a GitHub repository at \href{https://github.com/ingridp
 
 \captionof{listing}{\texttt{wandb.py}}
 \inputminted[fontsize=\footnotesize,linenos,breaklines=true,breakanywhere=true,frame=lines,baselinestretch=1]{python}{../optimisation/wandb_opt.py}
+
+\section{Examples}
+
+The examples are originally a set of Jupyter Notebooks. However, for visualisation purposes in this report, they have been converted to Python scripts. 
+
+\captionof{listing}{\texttt{findownloader.py}}
+\inputminted[fontsize=\footnotesize,linenos,breaklines=true,breakanywhere=true,frame=lines,baselinestretch=1]{python}{../examples/findownloader.py}
+
+\captionof{listing}{\texttt{finpreprocessor.py}}
+\inputminted[fontsize=\footnotesize,linenos,breaklines=true,breakanywhere=true,frame=lines,baselinestretch=1]{python}{../examples/finpreprocessor.py}
+
+\captionof{listing}{\texttt{portfolio\_optimisation.py}}
+\inputminted[fontsize=\footnotesize,linenos,breaklines=true,breakanywhere=true,frame=lines,baselinestretch=1]{python}{../examples/portfolio_optimisation.py}
+
+\captionof{listing}{\texttt{backtesting.py}}
+\inputminted[fontsize=\footnotesize,linenos,breaklines=true,breakanywhere=true,frame=lines,baselinestretch=1]{python}{../examples/backtesting.py}
+
+\captionof{listing}{\texttt{hyperparameter\_tuning.py}}
+\inputminted[fontsize=\footnotesize,linenos,breaklines=true,breakanywhere=true,frame=lines,baselinestretch=1]{python}{../examples/hyperparameter_tuning.py}
+
+\captionof{listing}{\texttt{explainability.py}}
+\inputminted[fontsize=\footnotesize,linenos,breaklines=true,breakanywhere=true,frame=lines,baselinestretch=1]{python}{../examples/explainability.py}
